--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         in the finished product. Remember to delete this comment once the
         code is implemented.
         -->
-
+<!-- 
      
     <div id="hour-9" class="row time-block">
         <div class="col-2 col-md-1 hour text-center py-3">9AM</div>
@@ -107,7 +107,7 @@
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
-      </div>  
+      </div>   -->
 
       
 
